# workflowenv

./: Dockerfile  README.md  client.py  easy_task_v2.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  grader_bridge.py  models.py
tests/: test_grader.py
